<resources>
    <string name="app_name">AndroidNanoDegree</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="built_it_bigger">Build it bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">CapStone: My Own App</string>
    <string name="activity_main">My App Portfolio</string>
    <string name="menu_popular">Most popular</string>
    <string name="menu_top_rated">Top rated</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="activity_popular_movies">Popular Movies</string>
    <string name="synopsis">Synopsis</string>
    <string name="release_date">Release date</string>
    <string name="language">Language</string>
    <string name="vote_average">Rating</string>
    <string name="top_rated">Top Rated</string>
    <string name="most_popular">Most Popular</string>
    <string name="action_favorite">Add to favorite</string>
    <string name="action_share">Share the movie</string>
    <string name="error_player">Fail to open youtube player</string>
    <string name="menu_favorite">Favorite</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="favorite">Favorite</string>

    <!-- MySyncAdapter -->
    <string name="sync_account_type">androidnanodegree.app.simonmawole.com</string>
    <string name="content_authority">com.simonmawole.app.androidnanodegree</string>

</resources>
