<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/my_nanodegree_apps"
            android:textSize="@dimen/text_size_super_large"
            android:layout_marginTop="@dimen/space_size_medium"
            android:layout_marginBottom="@dimen/space_size_medium"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonPopularMovies"
            android:layout_width="@dimen/main_activity_button_width"
            android:text="@string/popular_movies"
            android:layout_marginLeft="@dimen/space_size_medium"
            android:layout_marginRight="@dimen/space_size_medium"
            android:layout_marginTop="@dimen/space_size_extra_small"
            android:layout_marginBottom="@dimen/space_size_extra_small"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonSpotifyStreamer"
            android:layout_width="@dimen/main_activity_button_width"
            android:text="@string/spotify_streamer"
            android:layout_marginLeft="@dimen/space_size_medium"
            android:layout_marginRight="@dimen/space_size_medium"
            android:layout_marginTop="@dimen/space_size_extra_small"
            android:layout_marginBottom="@dimen/space_size_extra_small"
            android:background="@color/orange_500"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonScores"
            android:layout_width="@dimen/main_activity_button_width"
            android:text="@string/scores_app"
            android:layout_marginLeft="@dimen/space_size_medium"
            android:layout_marginRight="@dimen/space_size_medium"
            android:layout_marginTop="@dimen/space_size_extra_small"
            android:layout_marginBottom="@dimen/space_size_extra_small"
            android:background="@color/orange_500"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/buttonLibrary"
            android:layout_width="@dimen/main_activity_button_width"
            android:text="@string/library_app"
            android:layout_marginLeft="@dimen/space_size_medium"
            android:layout_marginRight="@dimen/space_size_medium"
            android:layout_marginTop="@dimen/space_size_extra_small"
            android:layout_marginBottom="@dimen/space_size_extra_small"
            android:background="@color/orange_500"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/buttonBuildItBigger"
            android:layout_width="@dimen/main_activity_button_width"
            android:text="@string/built_it_bigger"
            android:layout_marginLeft="@dimen/space_size_medium"
            android:layout_marginRight="@dimen/space_size_medium"
            android:layout_marginTop="@dimen/space_size_extra_small"
            android:layout_marginBottom="@dimen/space_size_extra_small"
            android:background="@color/orange_500"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonXYZReader"
            android:layout_width="@dimen/main_activity_button_width"
            android:text="@string/xyz_reader"
            android:layout_marginLeft="@dimen/space_size_medium"
            android:layout_marginRight="@dimen/space_size_medium"
            android:layout_marginTop="@dimen/space_size_extra_small"
            android:layout_marginBottom="@dimen/space_size_extra_small"
            android:background="@color/orange_500"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonMyOwnApp"
            android:layout_width="@dimen/main_activity_button_width"
            android:text="@string/capstone"
            android:layout_marginLeft="@dimen/space_size_medium"
            android:layout_marginRight="@dimen/space_size_medium"
            android:layout_marginTop="@dimen/space_size_extra_small"
            android:layout_marginBottom="@dimen/space_size_extra_small"
            android:background="@color/red_500"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>