<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_200"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_detail_poster_height">

            <ImageView
                android:id="@+id/ivMoviePoster"
                android:layout_width="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="@dimen/space_size_small"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/white"
                android:background="@color/dark_transparent"
                android:id="@+id/tvMovieTitle"/>

        </RelativeLayout>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/space_size_small"
                    android:padding="@dimen/space_size_small"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/release_date"
                        android:textSize="@dimen/text_size_small"
                        android:textColor="@color/grey_500"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvReleaseDate"
                        android:layout_width="match_parent"
                        android:padding="@dimen/space_size_extra_small"
                        android:textColor="@color/grey_800"
                        android:layout_marginBottom="@dimen/space_size_extra_small"
                        android:textSize="@dimen/text_size_medium"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/space_size_small"
                    android:padding="@dimen/space_size_small"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/language"
                        android:textSize="@dimen/text_size_small"
                        android:textColor="@color/grey_500"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tvLanguage"
                        android:layout_width="match_parent"
                        android:padding="@dimen/space_size_extra_small"
                        android:textColor="@color/grey_800"
                        android:textSize="@dimen/text_size_medium"
                        android:layout_marginBottom="@dimen/space_size_extra_small"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/space_size_small"
                    android:padding="@dimen/space_size_small"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/vote_average"
                        android:textSize="@dimen/text_size_small"
                        android:textColor="@color/grey_500"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvVoteAverage"
                        android:layout_width="match_parent"
                        android:padding="@dimen/space_size_extra_small"
                        android:textColor="@color/grey_800"
                        android:textSize="@dimen/text_size_medium"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_size_small"
            android:layout_marginBottom="@dimen/space_size_small"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/trailers"
                android:layout_marginLeft="24dp"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/grey_500"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvMovieTrailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_margin="@dimen/space_size_small"
                android:padding="@dimen/space_size_small"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/synopsis"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/grey_500"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvSynopsis"
                    android:layout_width="match_parent"
                    android:padding="@dimen/space_size_extra_small"
                    android:textColor="@color/grey_800"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_size_small"
            android:layout_marginBottom="@dimen/space_size_small"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/reviews"
                android:layout_marginLeft="24dp"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/grey_500"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvMovieReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>